# cl-syllabus

./: cl-syllabus.toml  pyproject.toml
src/: cl-syllabus
