[project]
name = "cl-syllabus"
version = "0.1.0"
description = "Scrape IA/IB CST information from course pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "logging>=0.4.9.6",
    "rich>=13.7.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
